# Cellrix

./: .coverage  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CIS.md  ENGINEERING_GUIDE.md  README.md  README.zh-CN.md  WHITEPAPER.md  my-dashboard.json  my-live-dashboard.json  pyproject.toml
adapters/textual/: pyproject.toml
adapters/textual/cellrix_textual/: __init__.py  app.py  runner.py
cli/: __init__.py  _input.py  actions.py  cellrix.py  input_router.py  keybindings.py  renderer.py  runtime.py  theme.py
cli/daemon/: __init__.py  agent_routes.py  interceptor.py
core/: __init__.py  source.py  tree.py
core/layout/: __init__.py  solver.py
core/manifest/: __init__.py  models.py  parser.py
core/schemas/: agent.py
core/security/: __init__.py  sanitizer.py  validator.py
devkit/: __init__.py  bridge.py  templates.py
docs/: CAP.md  CAP.zh-CN.md  CIS.md  CIS.zh-CN.md  ROADMAP.md  WHITEPAPER.zh-CN.md  design_guide.md
examples/: agent_demo.py  dashboard.json  hello.json  three_panels.json
stations/_dev/: view.html
stations/night-blue-pro/: intents.json  manifest.json  theme.json
tests/: __init__.py  test_agent_accessibility.py  test_conformance.py  test_hitl_state_machine.py  test_layout.py  test_manifest.py  test_security.py  test_solver.py  test_theme.py
