[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cellrix-textual"
version = "0.1.0"
description = "Textual adapter for Cellrix – intent-driven terminal UI protocol"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jasonmilk & Cellrix Contributors"}]
dependencies = [
    "cellrix-core @ file:///opt/Cellrix",
    "textual>=0.50,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
    "mypy",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
